--- a/TODO
+++ b/TODO
@@ -1,7 +1,5 @@
 - transform array_add, array_remove macros to functions for type-safety for both
   types of graphs.
-- add find_connected and find_connected_custom for both types of graphs.
-- add foreach_connected and count_connected for simple graphs.
-- document everything in simple graphs.
+- add find_connected and find_connected_custom for complex graphs.
 - set up a build system.
 - set up documentation generation.
