Correct a tool info in README.
* README: For ChangeLog generation now sed is needed, not perl.

--- a/README
+++ b/README
@@ -15,5 +15,5 @@ Build from git dependencies:
 
 - same as above
 - recent autotools
-- perl and git for ChangeLog generation
+- sed and git for ChangeLog generation
 - gtk-doc >= 1.9 for documentation
